Migrate to Dagger 2.0-SNAPSHOT and Gradle plugin 1.1